# offline-workout-tracker

./: .gitignore  CMakeLists.txt  LICENSE  PRIVACY_POLICY.md  README.md  build-android.sh  build-linux.sh  build-windows.bat
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/swt/: MainActivity.kt
android/app/src/main/java/com/swt/bridge/: SwtBridge.kt
android/app/src/main/java/com/swt/ui/: SwtApp.kt
android/app/src/main/java/com/swt/ui/screens/: ExercisesScreen.kt  HistoryScreen.kt  ProgressScreen.kt  WorkoutScreen.kt
android/app/src/main/java/com/timsippell/owt/: MainActivity.kt
android/app/src/main/java/com/timsippell/owt/bridge/: OwtBridge.kt
android/app/src/main/java/com/timsippell/owt/nfc/: NfcSessionManager.kt  WorkoutHceService.kt
android/app/src/main/java/com/timsippell/owt/p2p/: DataTransferManager.kt  ShareSession.kt  ShareState.kt  WifiDirectManager.kt
android/app/src/main/java/com/timsippell/owt/ui/: OwtApp.kt
android/app/src/main/java/com/timsippell/owt/ui/screens/: ExercisesScreen.kt  HistoryScreen.kt  ProgressScreen.kt  SettingsScreen.kt  SetupScreen.kt  ShareScreen.kt  TemplateBuilderScreen.kt  TemplatesScreen.kt  WorkoutScreen.kt
android/app/src/main/java/com/timsippell/swt/: MainActivity.kt
android/app/src/main/java/com/timsippell/swt/bridge/: SwtBridge.kt
android/app/src/main/java/com/timsippell/swt/nfc/: NfcSessionManager.kt  WorkoutHceService.kt
android/app/src/main/java/com/timsippell/swt/p2p/: DataTransferManager.kt  ShareSession.kt  ShareState.kt  WifiDirectManager.kt
android/app/src/main/java/com/timsippell/swt/ui/: SwtApp.kt
android/app/src/main/java/com/timsippell/swt/ui/screens/: ExercisesScreen.kt  HistoryScreen.kt  ProgressScreen.kt  SettingsScreen.kt  SetupScreen.kt  ShareScreen.kt  TemplateBuilderScreen.kt  TemplatesScreen.kt  WorkoutScreen.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: aid_list.xml
android/app/src/test/java/com/timsippell/owt/: OwtBridgeDataTest.kt  ParseDateTest.kt  WeightConversionTest.kt
android/app/src/test/java/com/timsippell/swt/: ParseDateTest.kt  SwtBridgeDataTest.kt  WeightConversionTest.kt
gui/: CMakeLists.txt  app.cpp  app.h  main.cpp  theme.cpp  theme.h
gui/views/: exercise_view.cpp  exercise_view.h  history_view.cpp  history_view.h  progress_view.cpp  progress_view.h  settings_view.cpp  settings_view.h  template_view.cpp  template_view.h  workout_view.cpp  workout_view.h
ios/: .gitignore  project.yml  setup.sh
ios/SimpleWorkoutTracker/App/: SimpleWorkoutTrackerApp.swift
ios/SimpleWorkoutTracker/Bridge/: SwtBridge.swift  module.modulemap  swt_bridge_c.cpp  swt_bridge_c.h
ios/SimpleWorkoutTracker/Models/: Exercise.swift  ExerciseStats.swift  ImportSummary.swift  ProgressionPoint.swift  TemplateSet.swift  Workout.swift  WorkoutSet.swift  WorkoutTemplate.swift
ios/SimpleWorkoutTracker/Views/: ContentView.swift
ios/SimpleWorkoutTracker/Views/Exercises/: ExercisesView.swift
ios/SimpleWorkoutTracker/Views/History/: HistoryView.swift
ios/SimpleWorkoutTracker/Views/Progress/: ProgressView.swift
ios/SimpleWorkoutTracker/Views/Settings/: SettingsView.swift
ios/SimpleWorkoutTracker/Views/Setup/: SetupView.swift
ios/SimpleWorkoutTracker/Views/Share/: MultipeerShareSession.swift  ShareView.swift
ios/SimpleWorkoutTracker/Views/Templates/: TemplateBuilderView.swift  TemplatesView.swift
ios/SimpleWorkoutTracker/Views/Workout/: WorkoutView.swift
lib/: CMakeLists.txt
lib/include/owt/: converter.h  database.h  defaults.h  models.h  repository.h
lib/include/swt/: calculator.h  data_io.h  models.h  repository.h  swt.h  types.h
lib/jni/: owt_jni.cpp  swt_jni.cpp
lib/src/: calculator.cpp  converter.cpp  data_io.cpp  database.cpp  defaults.cpp  repository.cpp
tests/: CMakeLists.txt  calculator_test.cpp  converter_test.cpp  data_io_test.cpp  defaults_test.cpp  repository_test.cpp  test_helpers.h
tui/: CMakeLists.txt  app.cpp  app.h  main.cpp
tui/views/: data_view.cpp  data_view.h  exercise_view.cpp  exercise_view.h  history_view.cpp  history_view.h  progress_view.cpp  progress_view.h  template_view.cpp  template_view.h  workout_view.cpp  workout_view.h
tui/widgets/: input.cpp  input.h  menu.cpp  menu.h  table.cpp  table.h
